fix tab centering on iOS 6.0, closes #162

--- a/scss/_tabs.scss
+++ b/scss/_tabs.scss
@@ -70,13 +70,10 @@
 
 .tab-item {
   @include flex(1);
-  display: inline-block;
+  display: block;
   overflow: hidden;
-  box-sizing: border-box;
-  //margin: auto;
-
+  
   max-width: $tab-item-max-width;
-
   height: 100%;
 
   color: inherit;
